// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The TaskCard Component should match the snapshot 1`] = `
<section
  class="sc-bdfBwQ fFBvFt"
>
  <h2
    class="sc-gsTCUz gzfVJk"
  >
    mock task title
  </h2>
  <p
    class="sc-dlfnbm bglaea"
  >
    A mock description
  </p>
  <p
    class="sc-hKgILt fLjEpC"
  >
    comment 1
  </p>
  <p
    class="sc-hKgILt fLjEpC"
  >
    comment 2
  </p>
</section>
`;

exports[`The TaskColumn Component should match the snapshot 1`] = `
<section
  class="sc-eCssSg jmQFqn"
>
  <h1
    class="sc-jSgupP cMqrVE"
  >
    test title
  </h1>
  <div
    aria-describedby="rbd-hidden-text-0-hidden-text-0"
    data-rbd-drag-handle-context-id="0"
    data-rbd-drag-handle-draggable-id="876"
    data-rbd-draggable-context-id="0"
    data-rbd-draggable-id="876"
    draggable="false"
    role="button"
    tabindex="0"
  >
    <section
      class="sc-bdfBwQ fFBvFt"
    >
      <h2
        class="sc-gsTCUz gzfVJk"
      >
        mock task title
      </h2>
      <p
        class="sc-dlfnbm bglaea"
      >
        A mock description
      </p>
      <p
        class="sc-hKgILt fLjEpC"
      >
        comment 1
      </p>
      <p
        class="sc-hKgILt fLjEpC"
      >
        comment 2
      </p>
    </section>
  </div>
</section>
`;
